--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,173 @@
-numpy
-matplotlib
-scipy
-scikit-learn
-scikit-image
-librosa
-Pillow
-cython
-pytorch
-tensorflow>=2.0.0
-tensorboard
-tensorflow-hub
+absl-py==0.15.0
+addict==2.4.0
+argon2-cffi==21.1.0
+astunparse==1.6.3
+atomicwrites==1.4.1
+attrs==21.2.0
+audioread==3.0.1
+autolab-core==1.1.0
+backcall==0.2.0
+bleach==6.1.0
+blis==0.4.1
+cachetools==4.2.4
+catalogue==1.0.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.6.0
+comm==0.2.2
+cycler==0.12.1
+cymem==2.0.8
+Cython==0.29.23
+debugpy==1.8.5
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+entrypoints==0.3
+fastjsonschema==2.20.0
+filelock==3.16.0
+flatbuffers==24.3.25
+fonttools==4.53.1
+fsspec==2024.9.0
+gast==0.3.3
+gensim==4.1.2
+gitdb==4.0.11
+GitPython==3.1.2
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.41.1
+h5py==3.6.0
+humanfriendly==10.0
+idna==3.8
+imageio==2.35.1
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+iniconfig==1.1.1
+ipykernel==6.5.0
+ipython==7.29.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.5
+jedi==0.18.0
+Jinja2==3.1.4
+joblib==1.1.0
+jsonschema==4.2.1
+jupyter==1.0.0
+jupyter-client==7.0.6
+jupyter-console==6.4.0
+jupyter-core==4.9.1
+jupyterlab_pygments==0.3.0
+jupyterlab_widgets==3.0.13
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.7
+librosa==0.8.1
+llvmlite==0.37.0
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.5.3
+matplotlib-inline==0.1.7
+mistune==0.8.4
+mmcv==1.4.2
+mpmath==1.3.0
+multiprocess==0.70.12.2
+murmurhash==1.0.10
+nbclient==0.5.5
+nbconvert==6.2.0
+nbformat==5.10.3
+nest-asyncio==1.5.1
+networkx==3.1
+nltk==3.5
+notebook==6.4.5
+numba==0.54.1
+numpy==1.18.4
+oauthlib==3.2.2
+onnxruntime==1.18.0
+opencv-python==4.5.5.62
+opt-einsum==3.3.0
+packaging==21.2
+pandas==1.3.4
+pandocfilters==1.5.1
+parso==0.8.2
+pickleshare==0.7.5
+pillow==10.4.0
+plac==1.1.3
+platformdirs==4.3.2
+pluggy==1.0.0
+pooch==1.8.2
+preshed==3.0.9
+prometheus-client==0.12.0
+prompt-toolkit==3.0.22
+protobuf==3.19.1
+py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.22
+Pygments==2.10.0
+pyparsing==2.4.7
+pyreadline==2.1
+pyreadline3==3.4.1
+pyrsistent==0.18.0
+pytest==7.0.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyWavelets==1.4.1
+pywin32==306
+pywinpty==2.0.13
+PyYAML==6.0.2
+pyzmq==26.2.0
+qtconsole==5.2.0
+QtPy==1.11.2
+regex==2024.7.24
+requests==2.32.3
+requests-oauthlib==2.0.0
+resampy==0.4.3
+rsa==4.7.2
+ruamel.yaml==0.17.20
+ruamel.yaml.clib==0.2.6
+scikit-image==0.19.3
+scikit-learn==1.1.3
+scipy==1.7.2
+seaborn==0.11.0
+Send2Trash==1.8.3
+setproctitle==1.2.2
+six==1.16.0
+smart-open==7.0.4
+smmap==5.0.0
+soundfile==0.12.1
+spacy==2.3.2
+srsly==1.0.5
+sympy==1.13.2
+tensorboard==2.2.2
+tensorboard-data-server==0.7.2
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.3.0
 tensorflow-estimator==2.3.0
-opencv-python
-autolab_core
-h5py
-imgaug
-Wave
-IPython[all]
+tensorflow-hub==0.12.0
+termcolor==2.4.0
+terminado==0.12.1
+testpath==0.6.0
+tf-keras==2.15.0
+thinc==7.4.1
+threadpoolctl==3.5.0
+tifffile==2023.7.10
+tomli==2.0.1
+torch==2.4.1+cu118
+torchaudio==2.4.1+cu118
+torchvision==0.19.1+cu118
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+typing_extensions==4.12.2
+urllib3==2.2.2
+wasabi==0.8.2
+Wave==0.0.2
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==2.0.2
+widgetsnbextension==4.0.13
+wrapt==1.16.0
+yapf==0.32.0
+zipp==3.20.1
