--- a/models/Audio_ConvLSTM/config/config_inference.yaml
+++ b/models/Audio_ConvLSTM/config/config_inference.yaml
@@ -65,16 +65,15 @@
 
 OUTPUT_DIR: inference_DepressionAnalysis+NoGB
 SAVE_CONFIG_NAME: config_inference_DepressionAnalysis+NoGB.yaml
-CKPTS_DIR: /cvhci/temp/wpingcheng/ckpts_new/  # TODO
+CKPTS_DIR: E:\myworkspace\DepressionEstimation\models\Audio_ConvLSTM\model_weights  # TODO
 TYPE: A+Conv-BiLSTM-1D+PHQ-Subscores+Mel  # TODO
 MANUAL_SEED: 1
 LOG_TITLE: Depression Detection with mix Audio(Mel), Conv-BiLSTM-1D, PHQ-Subscores, CrossEntropy with weights, ASAM # TODO
 
 DATA:
-  TRAIN_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/train/clipped_data/
-  VALID_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database/train/clipped_data/gender_balance
-  VALIDATION_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/train/original_data/
-  TEST_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/test/clipped_data/
+  TRAIN_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\train\clipped_data\
+  VALIDATION_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\train\original_data\
+  TEST_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\test\clipped_data\
   USE_MEL_SPECTROGRAM: True
   VISUAL_WITH_GAZE: False
   PADDING:
@@ -90,7 +89,7 @@ MODEL:
     TYPE: other        # ['new', 'last', 'absolute_path', others custom_type]
     DATE:
     PATH: model_weights
-    NAME: A+Conv1D-BiLSTM+PHQ-Subscores+Mel+NoGB_2022-03-25_103243_f1_score-0.5532.pt  # A+Conv-BiLSTM-1D+PHQ-Subscores+Mel+GB+Soft_2022-03-14_173846_score-0.6096.pt  #
+    NAME: A+Conv1D-BiLSTM+PHQ-Subscores+Mel_2024-09-11_112019_acc-56.0000.pt
     CUSTOM_ABSOLUTE_PATH: 
     INCLUDED: ['audio_net', 'evaluator']
   AUDIO_NET:
