--- a/models/Audio_ConvLSTM/config/config_phq-subscores.yaml
+++ b/models/Audio_ConvLSTM/config/config_phq-subscores.yaml
@@ -65,16 +65,16 @@
 
 OUTPUT_DIR: exp_A+Conv1D-BiLSTM+PHQ-Subscores+Mel
 SAVE_CONFIG_NAME: config_A+Conv1D-BiLSTM+PHQ-Subscores+Mel.yaml
-CKPTS_DIR: /cvhci/temp/wpingcheng/ckpts_new/  # TODO
+CKPTS_DIR: E:\myworkspace\DepressionEstimation\models\Audio_ConvLSTM\model_weights  # TODO
 TYPE: A+Conv1D-BiLSTM+PHQ-Subscores+Mel  # TODO
 MANUAL_SEED: 1
 LOG_TITLE: Depression Detection with mix Audio(Mel), Conv1D-BiLSTM, PHQ-Subscores, CrossEntropyLoss, ASAM # TODO
 
 DATA:
-  TRAIN_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/train/clipped_data/
+  TRAIN_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\train\clipped_data\
   VALID_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database/train/clipped_data/gender_balance/
-  VALIDATION_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/train/original_data/
-  TEST_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/test/clipped_data/
+  VALIDATION_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\train\original_data\
+  TEST_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\test\clipped_data\
   USE_MEL_SPECTROGRAM: True
   VISUAL_WITH_GAZE: False
   PADDING:
@@ -87,7 +87,7 @@ MODEL:
   PHQ_THRESHOLD: 10
   EPOCHS: 100
   WEIGHTS:
-    TYPE: others        # ['new', 'last', 'absolute_path', others custom_type]
+    TYPE: new        # ['new', 'last', 'absolute_path', others custom_type]
     DATE:
     PATH: model_weights
     NAME: A+Conv-BiLSTM-1D+PHQ-Subscores+Mel+GB+Soft_2022-03-14_173846_score-0.6096.pt
