--- a/models/Visual_ConvLSTM/config/config_inference.yaml
+++ b/models/Visual_ConvLSTM/config/config_inference.yaml
@@ -65,15 +65,15 @@
 
 OUTPUT_DIR: inference_DepressionAnalysis
 SAVE_CONFIG_NAME: config_inference_DepressionAnalysis.yaml
-CKPTS_DIR: /cvhci/temp/wpingcheng/ckpts_new/  # TODO
+CKPTS_DIR: E:\myworkspace\DepressionEstimation\models\Visual_ConvLSTM\model_weights  # TODO
 TYPE: V+Conv2D-BiLSTM+PHQ-Subscores  # TODO
 MANUAL_SEED: 1
 LOG_TITLE: Depression Detection with visual features (key points & gaze direction), Conv2D-BiLSTM, PHQ-Subscores # TODO
 
 DATA:
-  TRAIN_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/train/clipped_data/
-  VALIDATION_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/train/original_data/
-  TEST_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/test/clipped_data/
+  TRAIN_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\train\clipped_data\
+  VALIDATION_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\train\original_data\
+  TEST_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\test\clipped_data\
   USE_MEL_SPECTROGRAM: False
   VISUAL_WITH_GAZE: True
   PADDING:
@@ -86,10 +86,10 @@ MODEL:
   PHQ_THRESHOLD: 10
   EPOCHS: 1
   WEIGHTS:
-    TYPE: other        # ['new', 'last', 'absolute_path', others custom_type]
+    TYPE: new        # ['new', 'last', 'absolute_path', others custom_type]
     DATE:
     PATH: model_weights
-    NAME: V+Conv2D-BiLSTM+PHQ-Subscores+Soft_2022-03-15_170617_f1_score-0.6094.pt
+    NAME: V+Conv2D-BiLSTM+PHQ-Subscores+improve_2024-09-11_081747_f1_score-0.8696.pt
     CUSTOM_ABSOLUTE_PATH: 
     INCLUDED: ['visual_net', 'evaluator']
   VISUAL_NET:
