--- a/models/Visual_ConvLSTM/config/config_phq-binary.yaml
+++ b/models/Visual_ConvLSTM/config/config_phq-binary.yaml
@@ -65,15 +65,15 @@
 
 OUTPUT_DIR: exp_V+Conv2D-BiLSTM+PHQ-Binary
 SAVE_CONFIG_NAME: config_V+Conv2D-BiLSTM+PHQ-Binary.yaml
-CKPTS_DIR: /cvhci/temp/wpingcheng/ckpts_new/  # TODO
+CKPTS_DIR: E:\myworkspace\DepressionEstimation\models\Visual_ConvLSTM\model_weights  # TODO
 TYPE: V+Conv2D-BiLSTM+PHQ-Binary  # TODO
 MANUAL_SEED: 1
 LOG_TITLE: Depression Detection with visual features (key points & gaze direction), Conv2D-BiLSTM, PHQ-Binary, CrossEntropy with weights, ASAM # TODO
 
 DATA:
-  TRAIN_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/train/clipped_data/
-  VALIDATION_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/train/original_data/
-  TEST_ROOT_DIR: /cvhci/temp/wpingcheng/DAIC_WOZ-generated_database_V2/test/clipped_data/
+  TRAIN_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\train\clipped_data\
+  VALIDATION_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\train\original_data\
+  TEST_ROOT_DIR: E:\myworkspace\DepressionEstimation\daic_woz_preprocessing\daic_woz_dataset\DAIC_WOZ-generated_database_V2\test\clipped_data\
   USE_MEL_SPECTROGRAM: False
   VISUAL_WITH_GAZE: True
   PADDING:
